[package]
name = "monkey"
version = "0.1.0"
edition = "2021"
default-run = "monkey"

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
lazy_static = "1.4.0"
fnv = "1.0"
byteorder = "1"
clap = {version = "4.5.4", features = [ "derive" ]}

[dev-dependencies]
assert_cmd = "2.0.14"
criterion = { version = "0.5.1", features = ["html_reports"] }
